# autosql

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/autosql/: column.h  constraint.h  database.h  datatype.h  expression.h  parser.h  sqlparse.h  symbols.cppm  symbols.hpp  table.h  token.h
include/autosql/parse/: column.cppm  column.h  column.hpp  constraint.cppm  constraint.h  constraint.hpp  database.cppm  database.h  database.hpp  datatype.cppm  datatype.h  datatype.hpp  expression.cppm  expression.h  expression.hpp  parse.cppm  parser.cppm  parser.h  parser.hpp  table.cppm  table.h  table.hpp  token.h  token.hpp
include/autosql/schema/: column.cppm  column.h  column.hpp  constraint.cppm  constraint.h  constraint.hpp  database.cppm  database.h  database.hpp  datatype.cppm  datatype.h  datatype.hpp  expression.cppm  expression.h  expression.hpp  schema.cppm  table.cppm  table.h  table.hpp
src/: main.cpp
src/autosql/: column.cpp  constraint.cpp  datatype.cpp  parser.cpp  table.cpp
src/autosql/parse/: column.cpp  constraint.cpp  datatype.cpp  expression.cpp  parser.cpp  table.cpp
src/autosql/schema/: column.cpp  constraint.cpp  database.cpp  datatype.cpp  table.cpp
test/: after.sql  before.sql
